// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Experimental/Slider Range Slider 1`] = `
<section>
  

  <style>
    
    .docs-fn-container {
        display: grid;
        grid-template-columns: 0.5fr 2fr;
        column-gap: 0.1rem;
        row-gap: 0.1rem;
        background: white;
        padding: 1rem;
        justify-items: center;
        align-items: center;
    }

  </style>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        normal
      </b>
    </div>
    
    
    <div
      class="fn-slider fn-slider--range"
    >
      
        
      <div
        class="fn-slider__track"
        style="width: 30%; left: 0"
      >
        
            
        <div
          aria-label="slider handle"
          aria-valuemax="100"
          aria-valuemin="1"
          aria-valuenow="0"
          class="fn-slider__handle"
          role="slider"
          tabindex="0"
        >
          
                
          <span
            class="sap-icon sap-icon--megamenu"
          />
          
                
          <span
            class="sap-icon sap-icon--megamenu"
          />
          
            
        </div>
        
            
        <div
          class="fn-slider__track-range"
        />
        
            
        <div
          aria-label="slider handle"
          aria-valuemax="100"
          aria-valuemin="1"
          aria-valuenow="30"
          class="fn-slider__handle"
          role="slider"
          tabindex="0"
        >
          
                
          <span
            class="sap-icon sap-icon--megamenu"
          />
          
                
          <span
            class="sap-icon sap-icon--megamenu"
          />
          
            
        </div>
        
        
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        hover
      </b>
    </div>
    
    
    <div
      class="fn-slider fn-slider--range"
    >
      
        
      <div
        class="fn-slider__track"
        style="width: 30%; left: 30%"
      >
        
            
        <div
          aria-label="slider handle"
          aria-valuemax="100"
          aria-valuemin="1"
          aria-valuenow="30"
          class="fn-slider__handle is-hover"
          role="slider"
          tabindex="0"
        >
          
                
          <span
            class="sap-icon sap-icon--megamenu"
          />
          
                
          <span
            class="sap-icon sap-icon--megamenu"
          />
          
            
        </div>
        
            
        <div
          class="fn-slider__track-range"
        />
        
            
        <div
          aria-label="slider handle"
          aria-valuemax="100"
          aria-valuemin="1"
          aria-valuenow="60"
          class="fn-slider__handle is-hover"
          role="slider"
          tabindex="0"
        >
          
                
          <span
            class="sap-icon sap-icon--megamenu"
          />
          
                
          <span
            class="sap-icon sap-icon--megamenu"
          />
          
            
        </div>
        
        
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        active
      </b>
    </div>
    
    
    <div
      class="fn-slider fn-slider--range"
    >
      
        
      <div
        class="fn-slider__track"
        style="width: 20%; left: 60%"
      >
        
            
        <div
          aria-label="slider handle"
          aria-valuemax="100"
          aria-valuemin="1"
          aria-valuenow="60"
          class="fn-slider__handle"
          role="slider"
          tabindex="0"
        >
          
                
          <span
            class="sap-icon sap-icon--megamenu"
          />
          
                
          <span
            class="sap-icon sap-icon--megamenu"
          />
          
            
        </div>
        
            
        <div
          class="fn-slider__track-range"
        />
        
            
        <div
          aria-label="slider handle"
          aria-valuemax="100"
          aria-valuemin="1"
          aria-valuenow="80"
          class="fn-slider__handle"
          role="slider"
          tabindex="0"
        >
          
                
          <span
            class="sap-icon sap-icon--megamenu"
          />
          
                
          <span
            class="sap-icon sap-icon--megamenu"
          />
          
            
        </div>
        
        
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        focus
      </b>
    </div>
    
    
    <div
      class="fn-slider fn-slider--range"
    >
      
        
      <div
        class="fn-slider__track"
        style="width: 70%; left: 30%"
      >
        
            
        <div
          aria-label="slider handle"
          aria-valuemax="100"
          aria-valuemin="1"
          aria-valuenow="30"
          class="fn-slider__handle is-focus"
          role="slider"
          tabindex="0"
        >
          
                
          <span
            class="sap-icon sap-icon--megamenu"
          />
          
                
          <span
            class="sap-icon sap-icon--megamenu"
          />
          
            
        </div>
        
            
        <div
          class="fn-slider__track-range"
        />
        
            
        <div
          aria-label="slider handle"
          aria-valuemax="100"
          aria-valuemin="1"
          aria-valuenow="100"
          class="fn-slider__handle is-focus"
          role="slider"
          tabindex="0"
        >
          
                
          <span
            class="sap-icon sap-icon--megamenu"
          />
          
                
          <span
            class="sap-icon sap-icon--megamenu"
          />
          
            
        </div>
        
        
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        disabled
      </b>
    </div>
    
    
    <div
      class="fn-slider fn-slider--range is-disabled"
    >
      
        
      <div
        class="fn-slider__track"
        style="width: 100%; left: 0%"
      >
        
            
        <div
          aria-label="slider handle"
          aria-valuemax="100"
          aria-valuemin="1"
          aria-valuenow="0"
          class="fn-slider__handle"
          role="slider"
        >
          
                
          <span
            class="sap-icon sap-icon--megamenu"
          />
          
                
          <span
            class="sap-icon sap-icon--megamenu"
          />
          
            
        </div>
        
            
        <div
          class="fn-slider__track-range"
        />
        
            
        <div
          aria-label="slider handle"
          aria-valuemax="100"
          aria-valuemin="1"
          aria-valuenow="100"
          class="fn-slider__handle"
          role="slider"
        >
          
                
          <span
            class="sap-icon sap-icon--megamenu"
          />
          
                
          <span
            class="sap-icon sap-icon--megamenu"
          />
          
            
        </div>
        
        
      </div>
      
    
    </div>
    

  </div>
  

</section>
`;

exports[`Storyshots Experimental/Slider Slider 1`] = `
<section>
  

  <style>
    
    .docs-fn-container {
        display: grid;
        grid-template-columns: 0.5fr 2fr;
        column-gap: 0.1rem;
        row-gap: 0.1rem;
        background: white;
        padding: 1rem;
        justify-items: center;
        align-items: center;
    }

  </style>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        normal
      </b>
    </div>
    
    
    <div
      class="fn-slider"
    >
      
        
      <div
        class="fn-slider__track"
        style="width: 0%;"
      >
        
            
        <div
          aria-label="slider handle"
          aria-valuemax="100"
          aria-valuemin="1"
          aria-valuenow="0"
          class="fn-slider__handle"
          role="slider"
          tabindex="0"
        >
          
                
          <span
            class="sap-icon sap-icon--megamenu"
          />
          
                
          <span
            class="sap-icon sap-icon--megamenu"
          />
          
            
        </div>
        
            
        <div
          class="fn-slider__track-range"
        />
        
        
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        hover
      </b>
    </div>
    
    
    <div
      class="fn-slider"
    >
      
        
      <div
        class="fn-slider__track"
        style="width: 25%;"
      >
        
            
        <div
          aria-label="slider handle"
          aria-valuemax="100"
          aria-valuemin="1"
          aria-valuenow="25"
          class="fn-slider__handle is-hover"
          role="slider"
          tabindex="0"
        >
          
                
          <span
            class="sap-icon sap-icon--megamenu"
          />
          
                
          <span
            class="sap-icon sap-icon--megamenu"
          />
          
            
        </div>
        
            
        <div
          class="fn-slider__track-range"
        />
        
        
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        active
      </b>
    </div>
    
    
    <div
      class="fn-slider"
    >
      
        
      <div
        class="fn-slider__track"
        style="width: 50%;"
      >
        
            
        <div
          aria-label="slider handle"
          aria-valuemax="100"
          aria-valuemin="1"
          aria-valuenow="50"
          class="fn-slider__handle is-active"
          role="slider"
          tabindex="0"
        >
          
                
          <span
            class="sap-icon sap-icon--megamenu"
          />
          
                
          <span
            class="sap-icon sap-icon--megamenu"
          />
          
            
        </div>
        
            
        <div
          class="fn-slider__track-range"
        />
        
        
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        focus
      </b>
    </div>
    
    
    <div
      class="fn-slider"
    >
      
        
      <div
        class="fn-slider__track"
        style="width: 75%;"
      >
        
            
        <div
          aria-label="slider handle"
          aria-valuemax="100"
          aria-valuemin="1"
          aria-valuenow="75"
          class="fn-slider__handle is-focus"
          role="slider"
          tabindex="0"
        >
          
                
          <span
            class="sap-icon sap-icon--megamenu"
          />
          
                
          <span
            class="sap-icon sap-icon--megamenu"
          />
          
            
        </div>
        
            
        <div
          class="fn-slider__track-range"
        />
        
        
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        disabled
      </b>
    </div>
    
    
    <div
      class="fn-slider is-disabled"
    >
      
        
      <div
        class="fn-slider__track"
        style="width: 100%;"
      >
        
            
        <div
          aria-label="slider handle"
          aria-valuemax="100"
          aria-valuemin="1"
          aria-valuenow="100"
          class="fn-slider__handle is-hover"
          role="slider"
        >
          
                
          <span
            class="sap-icon sap-icon--megamenu"
          />
          
                
          <span
            class="sap-icon sap-icon--megamenu"
          />
          
            
        </div>
        
            
        <div
          class="fn-slider__track-range"
        />
        
        
      </div>
      
    
    </div>
    

  </div>
  

</section>
`;
